--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="0; URL=https://meet.google.com/udo-yvkn-kue">
+<meta http-equiv="refresh" content="0; URL=https://meet.google.com/bkx-smeq-fdz">
 
